--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,15 @@
 name = "py_pack"
 version = "0.1.0"
 edition = "2021"
-
+authors = ["aaa <g9dawjjdgawjkgjaw09@gmail.com>"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
+[dependencies.pyo3]
+version = "0.13.2"
+features = ["extension-module"]
+
+[lib]
+name = "py_pack"
+crate-type = ["cdylib"]
