--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "py_pack"
+name = "fib_rs"
 version = "0.1.0"
 edition = "2021"
 authors = ["aaa <g9dawjjdgawjkgjaw09@gmail.com>"]
@@ -12,5 +12,5 @@ version = "0.13.2"
 features = ["extension-module"]
 
 [lib]
-name = "py_pack"
+name = "fib_rs"
 crate-type = ["cdylib"]
